--- a/install
+++ b/install
@@ -1,4 +1,4 @@
-setopt EXTENDED_GLOB
-for dotfile in ./dot-files/^include^README.md; do
+setopt extended_glob
+for dotfile in ./dot-files/^(include|README.md|install|TODO); do
   ln -s "$dotfile" "${HOME}/.${dotfile:t}"
 done
