--- a/install
+++ b/install
@@ -1,6 +1,7 @@
 setopt extended_glob
-for dotfile in ./dot-files/^(vim|include|README.md|install|TODO); do
+for dotfile in ./dot-files/(ctags|fzf.zsh|gitignore-global|zshrc); do
   ln -s "$dotfile" "${HOME}/.${dotfile:t}"
 done
 cd ./dot-files
-stow vim
+stow -v vim
+stow -v --target=/Users/dann/.config/nvim config_nvim
