--- a/vim/todo
+++ b/vim/todo
@@ -1,16 +1,7 @@
-Quickfix window pops up on gr (vim.lsp.buf.references()). Would be nice to auto move cursor to it,
-And after you press enter on a line, it jumps the cursor to the new window, so you have to manually jump back.
-Would be nice for the cursor to stay there. Preview window? Or something like FZF's preview would be great.
--->telescope works better!
-^^ same thing needed for errors/diagnostics
+[ ] Fork lualine to provide config options for min/max sizes to auto-shorten the filename? 
+	Or just stick with my custom function, and figure out highlighting...?
 
-"Fuzzy" completion, let us type more letters and the list narrows down
+[ ] Clangd stops sometimes... no errors in log, lsp log just stops. Find an nvim log??
 
-Completion inserting a full function inserts the parameters as if it were a snippet, but we're not using snippets so we have to manually delete the params
-
-lsp seems to be most stable with compdb generating compile_commands.json (includes the headers), but still needs to be restarted frequently
---Try a minimal config and see if it works
---Might be ccls, try cquery or clangd or ..?
---try to find a log that shows a crash. ccls log? lsp.log? 
-
+[ ] Get multiple lsp servers running: ccls only for its hierarchy custom commands, clangd for all else
 
